--- a/.gitignore
+++ b/.gitignore
@@ -457,3 +457,7 @@ Public/GustavDev/Voice/SpeakerGroups.lsf
 Public/UserTemp/*
 Projects/GustavDev/*
 Editor/TimelineEditor/AttitudePoseNodeData
+Editor/Mods/HauntedOne_0c0c36f6-be79-7842-7094-d431be991cb0/*
+Mods/HauntedOne_0c0c36f6-be79-7842-7094-d431be991cb0/*
+Projects/HauntedOne_0c0c36f6-be79-7842-7094-d431be991cb0/*
+Public/HauntedOne_0c0c36f6-be79-7842-7094-d431be991cb0/*
